test/error/ToplevelVar.ci
int x; //ERROR: Expected class or enum
